# http://mij.oltrelinux.com/devel/autoconf-automake/
AM_CFLAGS = --pedantic -Wall -std=c99 -O2
AM_LDFLAGS =

# bin_ installs to bin; hh_ is the binary name
bin_PROGRAMS = hh

hh_SOURCES = 									\
	hashset.c include/hashset.h 				\
	hstr_curses.c include/hstr_curses.h 		\
	hstr_history.c include/hstr_history.h 		\
	hstr_utils.c include/hstr_utils.h 			\
	hstr_favorites.c include/hstr_favorites.h	\
	hstr_blacklist.c include/hstr_blacklist.h	\
	hstr_regexp.c include/hstr_regexp.h			\
	radixsort.c include/radixsort.h 			\
	hstr.c 
